# llm-redteam-eval

./: .gitignore  README.md  pyproject.toml
adapters/: anthropic.py  base.py
cases/context_manipulation/: cm_authority_claim_001.yaml  cm_false_premise_001.yaml  cm_sycophancy_001.yaml
cases/instruction_conflict/: ic_role_hijack_001.yaml  ic_sys_user_priority_001.yaml
cases/prompt_injection/: pi_delimiter_confusion_001.yaml  pi_direct_001.yaml  pi_indirect_tool_001.yaml
cases/tool_misuse/: tm_context_exfiltration_001.yaml  tm_param_injection_001.yaml
redteam/: annotator.py  cli.py  report.py  runner.py  schema.py
